--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,50 @@
 .navbar-dark{
     background: black;
 }
+
+
+.jumbotron{
+    padding: 70px 30px 70px 30px;
+    margin: 0px auto;
+    background:rgb(117, 110, 110);
+    color: floralwhite;
+}
+
+
+.row-content{
+    margin: 0px auto;
+    padding: 50px 0px 50px 0px;
+    border-bottom: 1px ridge;
+    min-height: 400px;
+}
+
+body{
+    padding: 50px 0px 50px 0px;
+    z-index: 0;
+}
+
+.fa-heart{
+    color: red;
+}
+
+.footer{
+    padding: 20px 0px 20px 0px;
+    margin: 0px auto;
+    background: black;
+    color: floralwhite;
+}
+
+.footer-row-content{
+    padding: 30px 0px 30px 0px;
+    margin: 0px auto;
+}
+
+.tab-content{
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+}
+
+
+  
