--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,8 @@
 body{
     padding: 50px 0px 50px 0px;
     z-index: 0;
+   
+    
 }
 
 .fa-heart{
@@ -46,5 +48,8 @@ body{
     border-right: 1px solid #ddd;
 }
 
+.card-header{
+    background: grey;
+}
 
   
