--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,8 @@ body{
     background: grey;
 }
 
+
+
 form{
     opacity: 80%;
 }
@@ -77,11 +79,11 @@ form{
 
     /* Image for Parallax Section */ 
 .paralsec {
-    background-image: url("https://img.webnots.com/2017/05/parallax.jpg");
+    background-image: url("https://images.unsplash.com/photo-1517836357463-d25dfeac3438?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60");
     }
      
 .paralsec1 {
-    background-image: url("https://img.webnots.com/2017/05/parallax1.jpg");
+    background-image: url("https://images.unsplash.com/photo-1570691079236-4bca6c45d440?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60");
 }
      
 .paralsec2 {
